--- a/turn_off/config.yaml
+++ b/turn_off/config.yaml
@@ -1,7 +1,7 @@
-name: "Simple Example Add-on"
+name: "turn_off"
 version: "1.0.0"
-slug: "simple_example"
-description: "A simple example add-on for testing."
+slug: "turn_off"
+description: "turn_off_gpio17"
 arch:
   - armhf
   - armv7
