--- a/gpio/config.yaml
+++ b/gpio/config.yaml
@@ -9,11 +9,11 @@ arch:
 startup: application
 boot: manual
 options:
-  pins: [17, 18]
+  pins: 17
   state: "off"
 schema:
-  pins: list(int)
-  state: str("on"|"off")
+  pins: int?
+  state: str?
 devices:
    - "/dev/gpiochip0:/dev/gpiochip0:rwm"
 
