--- a/Bmp180-addon/Dockerfile
+++ b/Bmp180-addon/Dockerfile
@@ -14,6 +14,7 @@ RUN pip install --no-cache-dir \
     RPi.GPIO \
     requests
 RUN pip install smbus
+RUN pip install adafruit-bmp
 # Sao chép mã ứng dụng vào container
 COPY run.py /run.py
 
