--- a/bmp180/config.yaml
+++ b/bmp180/config.yaml
@@ -11,7 +11,7 @@ arch:
 startup: application
 boot: manual
 devices:
-  - "/dev/i2c-1:/dev/i2c-1:rwm"
+  - "/dev/i2c-*:rwm"
 options:
   api_base_url:
     description: "Base URL of Home Assistant API"
