--- a/select/config.yaml
+++ b/select/config.yaml
@@ -6,64 +6,24 @@ arch:
   - aarch64
   - amd64
   - armv7
-
+map:
+  - bmp180
+  - bmp280
+  - sht31
+  - sht45
+  - oxygen
+options:
+  theme: default
+  addr_bmp: 0x76
+  addr_sht: 0x44
+  addr_oxy: 0x70
 schema:
-  theme:
-    type: map
-    name: "Select Themes"
-    description: "Enable or disable themes"
-    mapping:
-      default:
-        type: boolean
-        name: "Default theme"
-        description: "Enable the default theme"
-        default: true
-      aurora:
-        type: boolean
-        default: false
-      cobalt2:
-        type: boolean
-        default: false
-      dark:
-        type: boolean
-        default: false
-      dracula:
-        type: boolean
-        default: false
-      espresso-libre:
-        type: boolean
-        default: false
-      github-dark:
-        type: boolean
-        default: false
-      github-dark-default:
-        type: boolean
-        default: false
-      github-dark-dimmed:
-        type: boolean
-        default: false
-
-  sensor:
-    type: map
-    name: "Select Sensors"
-    description: "Enable or disable sensors"
-    mapping:
-      sr:
-        type: boolean
-        default: true
-      bmp180:
-        type: boolean
-        default: false
-      bmp280:
-        type: boolean
-        default: false
-      sht31:
-        type: boolean
-        default: false
-      sht45:
-        type: boolean
-        default: false
-      Oxygen:
-        type: boolean
-        default: false
-
+  theme: list(default|aurora|cobalt2|dark|dracula|espresso-libre|github-dark|github-dark-default|github-dark-dimmed)
+  addr_bmp: list(0x76|0x77)
+  addr_sht: list(0x44|0x45)
+  addr_oxy: list(0x70|0x71|0x72|0x73)
+  bmp180: bool
+  bmp280: bool
+  sht31: bool
+  sht45: bool
+  oxygen: bool
