--- a/select/config.yaml
+++ b/select/config.yaml
@@ -8,9 +8,11 @@ arch:
   - armv7
 map:
   - ssl
+  - lls
 options:
   theme: default
 schema:
   theme: list(default|aurora|cobalt2|dark|dracula|espresso-libre|github-dark|github-dark-default|github-dark-dimmed)
   ssl: bool
+  lls: bool
 
