--- a/select/config.yaml
+++ b/select/config.yaml
@@ -9,8 +9,8 @@ arch:
 map:
   - ssl
 options:
-  - theme: default
+  theme: default
 schema:
-  - theme: list(default|aurora|cobalt2|dark|dracula|espresso-libre|github-dark|github-dark-default|github-dark-dimmed)
-  - ssl: bool
+  theme: list(default|aurora|cobalt2|dark|dracula|espresso-libre|github-dark|github-dark-default|github-dark-dimmed)
+  ssl: bool
 
