--- a/select/config.yaml
+++ b/select/config.yaml
@@ -8,9 +8,10 @@ arch:
   - armv7
 map:
   - ssl
+  - bmp180
 options:
   theme: default
 schema:
   theme: list(default|aurora|cobalt2|dark|dracula|espresso-libre|github-dark|github-dark-default|github-dark-dimmed)
   ssl: bool
-
+  bmp180: bool
