--- a/select/config.yaml
+++ b/select/config.yaml
@@ -9,9 +9,18 @@ arch:
 map:
   - ssl
   - bmp180
+  - bmp280
+  - sht31
+  - sht45
+  - oxygen
 options:
   theme: default
 schema:
   theme: list(default|aurora|cobalt2|dark|dracula|espresso-libre|github-dark|github-dark-default|github-dark-dimmed)
   ssl: bool
   bmp180: bool
+  bmp280: bool
+  sht31: bool
+  sht45: bool
+  oxygen: bool
+
