--- a/select/config.yaml
+++ b/select/config.yaml
@@ -17,7 +17,13 @@ options:
   addr-bmp: none
   addr-sht: none
   addr-oxy: none
+  api_base_url:
+    required: true
+  api_token:
+    required: true
 schema:
+  api_base_url: str
+  api_token: str
   ssl: bool
   bmp180: bool
   bmp280: bool
@@ -27,4 +33,3 @@ schema:
   addr-bmp: list(none|0x76|0x77)
   addr-sht: list(none|0x44|0x45)
   addr-oxy: list(none|0x70|0x71|0x72|0x73)
-
