--- a/select/Dockerfile
+++ b/select/Dockerfile
@@ -16,9 +16,11 @@ RUN pip install --no-cache-dir \
 RUN pip install smbus
 RUN pip install smbus2
 RUN pip install adafruit-bmp
+RUN pip install bmp280
 # Sao chép mã ứng dụng vào container
 COPY run.py /run.py
 COPY DFRobot_Oxygen.py /DFRobot_Oxygen.py
+COPY SHT4x.py /SHT4x.py
 #COPY options.json /data/options.json
 # Chạy script Python
 CMD ["python", "/run.py"]
