--- a/select/config.yaml
+++ b/select/config.yaml
@@ -21,6 +21,12 @@ options:
     required: true
   api_token:
     required: true
+  ssl: false
+  bmp180: false
+  bmp280: false
+  sht31: false
+  sht45: false
+  oxygen: false
 schema:
   api_base_url: str
   api_token: str
@@ -35,3 +41,4 @@ schema:
   addr-oxy: list(none|0x70|0x71|0x72|0x73)
 devices:
   - "/dev/i2c-5:rwm"
+
