--- a/select_rp/config.yaml
+++ b/select_rp/config.yaml
@@ -1,7 +1,7 @@
-name: select_rp
+name: enviroment_sensors
 version: dev
-slug: select_rp
-description: "test select_rp"
+slug: enviroment_sensors
+description: "Environment indicators collection"
 arch:
   - aarch64
   - amd64
@@ -30,7 +30,6 @@ options:
 schema:
   api_base_url: str
   api_token: str
-  ssl: bool
   bmp180: bool
   bmp280: bool
   sht31: bool
@@ -40,5 +39,5 @@ schema:
   addr-sht: list(none|0x44|0x45)
   addr-oxy: list(none|0x70|0x71|0x72|0x73)
 devices:
-  - "/dev/i2c-1:rwm"
+  - "/dev/i2c-5:rwm"
 
