--- a/select_rp/config.yaml
+++ b/select_rp/config.yaml
@@ -8,36 +8,30 @@ arch:
   - armv7
 map:
   - ssl
-  - bmp180
-  - bmp280
-  - sht31
-  - sht45
-  - oxygen
+  - temperture
+  - humidity
+  - oxygen-concentration
+  - pressure
 options:
   addr-bmp: none
   addr-sht: none
   addr-oxy: none
-  api_base_url: "http://192.168.137.233:8123/api/states"
+  api_base_url:
     required: true
   api_token:
     required: true
   ssl: false
-  bmp180: false
-  bmp280: false
-  sht31: false
-  sht45: false
-  oxygen: false
+  temperture: false
+  humidity: false
+  oxygen-concentration: false
+  pressure: false
 schema:
-  api_base_url: str
-  api_token: str
-  bmp180: bool
-  bmp280: bool
-  sht31: bool
-  sht45: bool
-  oxygen: bool
-  addr-bmp: list(none|0x76|0x77)
-  addr-sht: list(none|0x44|0x45)
-  addr-oxy: list(none|0x70|0x71|0x72|0x73)
+  api_base_url: str?
+  api_token: str?
+  tempurture: bool
+  humidity: bool
+  oxygen-concentration: bool
+  pressure: bool
 devices:
   - "/dev/i2c-5:rwm"
 
