--- a/enviroment_sensors/Dockerfile
+++ b/enviroment_sensors/Dockerfile
@@ -19,9 +19,7 @@ RUN pip install adafruit-bmp
 RUN pip install i2cdevice
 # Sao chép mã ứng dụng vào container
 COPY run.py /run.py
-COPY DFRobot_Oxygen.py /DFRobot_Oxygen.py
-COPY SHT4x.py /SHT4x.py
-COPY bmp280_driver.py /bmp280_driver.py
+COPY library /library
 #COPY options.json /data/options.json
 # Chạy script Python
 CMD ["python", "/run.py"]
