--- a/enviroment_sensors/config.yaml
+++ b/enviroment_sensors/config.yaml
@@ -1,7 +1,7 @@
-name: select
-version: dev
-slug: select
-description: "test select"
+name: enviroment-sensors
+version: 1.0.0
+slug: enviroment-sensors
+description: "this is an addons collect indicator of enviroment"
 arch:
   - aarch64
   - amd64
@@ -33,7 +33,7 @@ schema:
   ssl: bool
   bmp180: bool
   bmp280: bool
-  sht31: bool
+  sht31: bools
   sht45: bool
   oxygen: bool
   addr-bmp: list(none|0x76|0x77)
