--- a/enviroment_sensors/config.yaml
+++ b/enviroment_sensors/config.yaml
@@ -30,14 +30,13 @@ options:
 schema:
   api_base_url: str
   api_token: str
-  ssl: bool
   bmp180: bool
   bmp280: bool
   sht31: bool
   sht45: bool
   oxygen: bool
-  addr-bmp: list(none|0x76|0x77)
-  addr-sht: list(none|0x44|0x45)
-  addr-oxy: list(none|0x70|0x71|0x72|0x73)
+  addr-bmp: list(0x76|0x77)
+  addr-sht: list(0x44|0x45)
+  addr-oxy: list(0x70|0x71|0x72|0x73)
 devices:
   - "/dev/i2c-5:rwm"
