--- a/enviroment_sensors/config.yaml
+++ b/enviroment_sensors/config.yaml
@@ -17,9 +17,9 @@ options:
   addr-bmp: none
   addr-sht: none
   addr-oxy: none
-  api_base_url:
+  base_url:
     required: true
-  api_token:
+  token:
     required: true
   ssl: false
   bmp180: false
@@ -28,8 +28,8 @@ options:
   sht45: false
   oxygen: false
 schema:
-  api_base_url: str
-  api_token: str
+  base_url: str?
+  token: str?
   bmp180: bool
   bmp280: bool
   sht31: bool
